OHM-891: More cleanup while testing different question and score scenarios.
- Streamlined question and score requests for easier assembly by client
- Introduced DTOs for question and score to further reduce dupe code and to allow for future validation needs
- Updated Swagger annotations to describe new request and response for both question and score
- Added option to include state as part of response
